fixed tag date spacing

--- a/assets/css/_sass/tags.scss
+++ b/assets/css/_sass/tags.scss
@@ -89,9 +89,13 @@
     }
 
     &-meta {
-      color: $default-tint;
+      color: $default-color;
+      @media (prefers-color-scheme: dark) {
+        color: $default-color-dark;
+      }
       text-align: right;
       white-space: nowrap;
+      font-family: $monospaced;
     }
 
     &:hover,
